--- a/climate.css
+++ b/climate.css
@@ -15,6 +15,7 @@ body {
     color: #8f8f8f;
     text-align: center;
     justify-content: flex-start;
+
 }
 
 .main-header {
@@ -75,8 +76,8 @@ button {
 }
 
 .all-images img {
-    height: 200px; /* Set the desired height */
-    width: auto;   /* Keep the width proportional */
+    height: 200px;
+    width: auto;
 }
 
 
@@ -106,9 +107,18 @@ footer {
     padding: 1rem 0;
     text-align: center;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: auto;
+    margin-top: 50px;
     position: static;
     border-radius: 10px 10px 0 0;
+}
+
+.resources a {
+    text-decoration: none;
+    color: white;
+  }
+
+.footer-bottom p{
+    color: white;
 }
 
 /*progress bar stuff below*/
